--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="./css/colors.css">
     <link rel="stylesheet" href="./css/main.css">
+
+    <!-- Local js -->
+    <script src="./js/index.js" defer></script>
 </head>
 
 <body>
