--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Responsive</title>
 
     <!-- Local css -->
-    <link rel="stylesheet" href="../../../../css/reset.css">
+    <link rel="stylesheet" href="../../../css/reset.css">
     <!-- <link rel="stylesheet" href="../../../../css/normalize.css"> -->
 
 
